--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,10 +4,10 @@ driver:
     cpus: 2
     memory: 2048
   synced_folders:
-    - ['.', '/home/vagrant/dummy']
+    - ['.', '/omnibus/dummy', 'type: :rsync']
 
 provisioner:
-  require_chef_omnibus: 11.8.0
+  require_chef_omnibus: true
 
 platforms:
   - name: ubuntu-12.04
@@ -18,6 +18,7 @@ platforms:
     run_list: apt::default
   - name: centos-5.10
   - name: centos-6.5
+  - name: macosx-10.9
 
 suites:
   - name: default
@@ -25,5 +26,5 @@ suites:
     attributes:
       omnibus:
         build_user:  vagrant
-        build_dir:   /home/vagrant/dummy
+        build_dir:   /omnibus/dummy
         install_dir: /opt/dummy
